# R2H2_app

./: .gitignore  README.md  dev_notes.md  launch_r2h2.py  manage.py  pyproject.toml  r2h2_desktop.py  setup_launcher.py
.github/workflows/: publish.yaml
Logans_files/: 23-07-plot-testing  No_deg_model.py  README.md
dashboard/: admin.py  apps.py  models copy.py  models.py  simulation_worker.py  tests.py  urls.py  views.py
dashboard/management/commands/: create_main_model.py  ensure_default_controller.py  load_component_library.py
dashboard/migrations/: 0001_initial.py  0002_battery_name_alter_battery_aireplacementhour_and_more.py  0003_electrocellpem.py  0004_electrolyserunit.py  0005_thermalproperties.py  0006_timeoutput_and_more.py  0007_windinput.py  0008_simulation.py  0009_simulation_arlateraldistances_simulation_bsingleturb_and_more.py  0010_alter_battery_aireplacementhour_and_more.py  0011_alter_battery_aireplacementhour_and_more.py  0012_simulationrun.py  0013_alter_electrocellpem_inumcurrent.py  0014_windinput_wind_file.py  0015_simulationrun_cancelled_status.py  0016_windinput_h5_metadata.py  0017_simulationrun_output_path.py  0018_simulationrun_description.py  0019_simulation_duration_days.py  0020_simulationrun_xaxis_datetime.py  0021_simulation_datum_date.py  0022_simulation_controller_file.py  0023_controller_model_and_fk.py  0024_controller_edit_history.py  0025_controller_filename_to_filefield.py  0026_rename_rkt_uc_battery_ktemp.py  0027_rename_rkt_lc_battery_fkt.py  0028_alter_battery_fkt.py  0029_rename_rcontrolminsoc_battery_rcontroltargetsoc.py  0030_alter_battery_rbatteryrating_and_more.py  0031_add_battery_replacement_threshold.py  0032_simulationwindinput_through.py  0033_simulationwindinput_year_validators.py  0034_alter_simulationwindinput_year.py  0035_alter_simulationwindinput_options_and_more.py  0036_restore_datum_date.py  0037_remove_inumyears.py  0038_simulation_git_hash_simulation_version.py  0039_simulationrun_app_version_git_hash.py  0040_alter_simulation_datum_date.py  (+14 more)
dashboard/static/dashboard/css/: base.css
dashboard/templates/admin/: base_site.html
dashboard/templates/dashboard/: base.html  browse.html  help.html  home.html  landing.html  run_1hz.html  run_results.html  settings.html  simulation_detail.html  simulations.html  wind_data.html
dashboard/templatetags/: browse_extras.py
docs/: dev_notes_simulation_engine.md  dynamic_controller_user_guide.md  release_notes_v1.2.10.md  release_notes_v1.2.11.md  release_notes_v1.2.12.md  release_notes_v1.2.6.md  release_notes_v1.2.7.md  release_notes_v1.2.8.md  release_notes_v1.2.9.md
installer/windows/: INSTALL_WINDOWS.txt  install.bat  install.ps1  install_conda.bat
prototype/: launch.py
r2h2/: __init__.py  _plots_mpl.py  _plots_plotly.py  components.py  config.py  plots.py  r2h2.py
r2h2/components/: Battery.py  ElectroCell.py  ElectrolyserUnit.py  Simulation.py  ThermalProperties.py  TimeOutputs.py  WindInputs.py  __init__.py  base.py  battery.py
r2h2/defaults/: BaseElectroCell.yaml  ElectroCellPEM.yaml  ElectrolyserUnit.yaml  Simulation.yaml  ThermalProperties.yaml  TimeOutputs.yaml  WindInputs.yaml  battery.yaml  controller_template.py
r2h2_ui/: asgi.py  settings.py  urls.py  wsgi.py
tests/: launch.py  r2h2_demo.py
