[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2h2"
version = "1.2.2"
description = "The Desktop App for R2H2."
authors = [
    {name = "Adam Stock", email = "a.stock@hw.ac.uk"},
    {name = "Francesco Superchi", email = "francesco.superchi@unifi.it"},
    {name = "Peter McCallum", email = "peter.mccallum@dun-eideann-labs.co.uk"},
]
license = {text = "GNUv3"}
readme = "README.md"
requires-python = ">=3.11"      # End-of-life Oct 2027 (3.10 Oct 2026)
dependencies = [
    "numpy>=2.2.1",             # Released 2024, recommended latest-stable (2.1.x <= "old") 
    "pandas>=2.2.3",            # Released 2024, recommended latest-stable (2.1.x <= "old") 
    "PyYAML>=6.0.2",            # Released 2024, recommended latest-stable (6.0.1 <= "old") 
    "python-dotenv>=1.0.1",     # Released 2024, recommended latest-stable (1.0.0 <= "old") 
    "platformdirs>=4.3.0",      # Released 2024, recommended latest-stable (4.2.x <= "old")
    "django>=5.2.12,<6",        # LTS (to Apr 2028)
]

[project.scripts]
r2h2 = "launch_r2h2:main"

[tool.setuptools]
packages = ["r2h2"]
include-package-data = true