[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2h2"
version = "1.2.13"
description = "The Desktop App for R2H2."
authors = [
    {name = "Adam Stock", email = "a.stock@hw.ac.uk"},
    {name = "Francesco Superchi", email = "francesco.superchi@unifi.it"},
    {name = "Peter McCallum", email = "peter.mccallum@dun-eideann-labs.co.uk"},
]
license = {text = "GNUv3"}
readme = "README.md"
requires-python = ">=3.10"      # End-of-life Oct 2026 (3.11 Oct 2027)
dependencies = [
    "numpy>=2.2.1",             # Released 2024, recommended latest-stable (2.1.x <= "old") 
    "pandas>=2.2.3",            # Released 2024, recommended latest-stable (2.1.x <= "old") 
    "PyYAML>=6.0.2",            # Released 2024, recommended latest-stable (6.0.1 <= "old") 
    "python-dotenv>=1.0.1",     # Released 2024, recommended latest-stable (1.0.0 <= "old") 
    "platformdirs>=4.3.0",      # Released 2024, recommended latest-stable (4.2.x <= "old")
    "django>=5.2.12,<6",        # LTS (to Apr 2028)
    "scipy>=1.14.0",            # LTS-aligned; 1.14.x supports NumPy 2.x
    "h5py>=3.11.0",             # HDF5 file I/O for wind data
]

[project.scripts]
r2h2       = "launch_r2h2:main"
r2h2-setup = "setup_launcher:main"

[tool.setuptools]
py-modules     = ["launch_r2h2", "setup_launcher"]
include-package-data = true

[tool.setuptools.packages.find]
where   = ["."]
include = ["r2h2*", "r2h2_ui*", "dashboard*"]

[tool.setuptools.package-data]
"dashboard" = [
    "templates/**/*",
    "static/**/*",
    "migrations/*.py",
]